# eedl

./: README.md  environment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: Conda_Publish  linter.yml  python-package-conda.yml  unit-tests.yml
eedl/: image.py
src/eedl/: google_cloud.py  image.py  mosaic_rasters.py
tests/: test_basic.py
