[metadata]

name = eedl
description = Code to export arbitrarily large areas of data from Earth Engine to local storage and optionally process data locally afterward
author = nickrsan, AdamJCrawford
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    eedl

install_requires =
    earthengine-api
    gdal
    fiona
    pandas
    seaborn>=0.12.0
    rasterstats
    google-cloud-storage
    setuptools
    requests

python_requires = >=3.8
package_dir =
    =src
zip_safe = no